--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -67,6 +67,10 @@
                  android:permission="FodService">
         </service>
 
+        <service android:name=".fod.FodScreenOffService"
+                 android:permission="FodScreenOffService">
+        </service>
+
         <service
             android:name=".fpsinfo.FPSInfoService"
             android:exported="false">
