--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -113,6 +113,12 @@ on property:sys.boot_completed=1
     write /sys/block/sde/queue/nr_requests 128
     write /sys/block/sde/queue/iostats 1
 
+    # ZRAM setup
+    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 100
+    swapon_all /vendor/etc/fstab.qcom
+
 on property:vendor.post_boot.parsed=1
     # Enable idle state listener
     write /sys/class/drm/card0/device/idle_encoder_mask 1
