--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -141,7 +141,7 @@
                 android:resource="@string/fod_settings_summary" />
         </activity>
 
-        <activity
+<!--        <activity
             android:name=".display.DcDimmingSettingsActivity"
             android:label="@string/dc_dimming_enable_title"
             android:theme="@style/Theme.Main">
@@ -155,7 +155,7 @@
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/dc_dimming_enable_summary" />
-        </activity>
+        </activity>-->
 
         <activity
             android:name=".thermal.ThermalActivity"
