--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -140,7 +140,7 @@
                 android:resource="@string/fod_settings_summary" />
         </activity>
 
-<!--        <activity
+        <activity
             android:name=".display.DcDimmingSettingsActivity"
             android:label="@string/dc_dimming_enable_title"
             android:theme="@style/Theme.Main">
@@ -154,7 +154,7 @@
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/dc_dimming_enable_summary" />
-        </activity>-->
+        </activity>
 
     </application>
 </manifest>
